<resources>
    <string name="app_name"> Levi9 Application </string>
    <string name="Profile">Profile\u0020</string>
    <string name="Cocktails">Cocktails\u0020</string>
    <string name="Favorites">Favorites\u0020</string>
    <string name="Profile_name">Name\u0020</string>
    <string name="Profile_email">Email\u0020</string>
    <string name="Profile_password">Password\u0020</string>
    <string name="name"> Placeholder Name </string>
    <string name="email"> placeholder@email.com </string>
    <string name="password"> password123 </string>
    <string name="button_logout"> Logout</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="placeholder">Placeholder</string>
    <string name="searchBar">Enter a cocktail name...</string>
    <string name="searchErrorMessage">No results found</string>
    <string name="searchErrorTitle">Search Error</string>
    <string name="filterText">Filter cocktails by</string>
    <string name="placeholderFilter">%s %s</string>
    <string name="register">Registar</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="error_message">Something is not right</string>
    <string name="success_message">Registration success!</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="empty_password">Password can not be empty!</string>
    <string name="category">Category:</string>
    <string name="icon">Icon</string>
    <string name="glass_type">Glass type:</string>
    <string name="beer">Beer\u0020</string>
    <string name="beer_glass">Beer glass\u0020</string>
    <string name="ingredients">Ingredients\u0020</string>
    <string name="instructions">Instructions\u0020</string>
    <string name="alcoholic">Alcoholic\u0020</string>
    <string name="cocktails">Cocktails\u0020</string>
</resources>