<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/main_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="658dp">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="141dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="142dp"
                    android:src="@drawable/profile"
                    android:drawableLeft="@drawable/logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/Profile_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:focusable="false"
                    android:gravity="center"
                    android:background="@drawable/circular_text_edit"
                    android:textColor="@color/black"
                    android:autofillHints="name"
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/Profile_email"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/editTextText"
                    app:layout_constraintStart_toStartOf="@+id/editTextText"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText" />

                <EditText
                    android:focusable="false"
                    android:gravity="center"
                    android:background="@drawable/circular_text_edit"
                    android:textColor="@color/black"
                    android:autofillHints="emailAddress"
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/Profile_password"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

                <EditText
                    android:focusable="false"
                    android:gravity="center"
                    android:background="@drawable/circular_text_edit"
                    android:textColor="@color/black"
                    android:autofillHints="password"
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="@string/password"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/button_background_color"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textSize="22sp"
                    android:drawableLeft="@drawable/logout"
                    android:drawableTint="@color/white"
                    android:text="@string/button_logout"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>